0.021 (10.06.2005) - John Siracusa <siracusa@mindspring.com>

    * Corrected POD errors.
    
0.02 (10.05.2005) - John Siracusa <siracusa@mindspring.com>

    * Fix cloning bugs.
    * Added configurable default query param separator.
    * Added POD links.

0.012 (12.09.2004) - John Siracusa <siracusa@mindspring.com>

    * Fixed rel() to do explicit string comparison instead of relying on
      overload(), which seems to fail in perl 5.6.0 in that particular
      case.

0.011 (11.14.2004) - John Siracusa <siracusa@mindspring.com>

    * Added copyright info.

0.01 (11.13.2004) - John Siracusa <siracusa@mindspring.com>

    * Initial release.